# DL-MP-Encoder

./: .gitignore  CMakeLists.txt  CODEOWNERS  README
Data/Input/: aes-256-data.txt  aes-256-full.txt  aes-256-key.txt
Data/Input/Frames-0320x0240/: frame-0320x0240-0001.pgm  frame-0320x0240-0002.pgm  frame-0320x0240-0004.pgm  frame-0320x0240-0005.pgm  frame-0320x0240-0006.pgm  frame-0320x0240-0008.pgm  frame-0320x0240-0009.pgm  frame-0320x0240-0010.pgm  frame-0320x0240-0011.pgm  frame-0320x0240-0013.pgm  frame-0320x0240-0014.pgm  frame-0320x0240-0015.pgm  frame-0320x0240-0016.pgm  frame-0320x0240-0018.pgm  frame-0320x0240-0019.pgm  frame-0320x0240-0020.pgm  frame-0320x0240-0021.pgm  frame-0320x0240-0022.pgm  frame-0320x0240-0024.pgm  frame-0320x0240-0025.pgm  frame-0320x0240-0026.pgm  frame-0320x0240-0027.pgm  frame-0320x0240-0029.pgm  frame-0320x0240-0030.pgm  frame-0320x0240-0031.pgm  frame-0320x0240-0033.pgm  frame-0320x0240-0034.pgm  frame-0320x0240-0035.pgm  frame-0320x0240-0036.pgm  frame-0320x0240-0038.pgm  frame-0320x0240-0039.pgm  frame-0320x0240-0040.pgm  frame-0320x0240-0041.pgm  frame-0320x0240-0043.pgm  frame-0320x0240-0044.pgm  frame-0320x0240-0045.pgm  frame-0320x0240-0046.pgm  frame-0320x0240-0048.pgm  frame-0320x0240-0049.pgm  frame-0320x0240-0050.pgm  (+1398 more)
Demo/: Attack-001-Dummy.cpp  Attack-002-Modify.cpp  Attack-003-Drop.cpp  Attack-004-Random.cpp  Attacker.cpp  CMakeLists.txt  Gateway.cpp  IC_RX_Video.cpp  IC_TX_Video.cpp  MP_RX_Video.cpp  MP_TX_Video.cpp  OTP_RX_Image.cpp  OTP_RX_Video.cpp  OTP_TX_Image.cpp  OTP_TX_Video.cpp
Include/Base/: Aes.h  Attack.h  Buffer.h  CommonFrame.h  CommonFrames.h  Crc.h  Dummy.h  Endianness.h  Lua.h  Network.h  Packet.h  Screen.h  Sha512.h  Statistics.h  Time.h  UtilsConfig.h  UtilsParser.h  UtilsPgm.h
Include/IntegrityCheck/: IntegrityCheckController.h  IntegrityCheckControllerClient.h  IntegrityCheckControllerServer.h  IntegrityCheckFrame.h  IntegrityCheckFrames.h  IntegrityCheckManager.h
Include/Multipath/: MpController.h  MpControllerClient.h  MpControllerServer.h  MpEncoder.h  MpFrame.h  MpFrames.h  MpManager.h
Include/OneTimePad/: OtpController.h  OtpControllerClient.h  OtpControllerServer.h  OtpEncoder.h  OtpFrame.h  OtpFrames.h  OtpManager.h
Include/Private/: PrivateCommonFrame.h  PrivateFrames.h  PrivateIntegrityCheckController.h  PrivateIntegrityCheckControllerClient.h  PrivateIntegrityCheckControllerServer.h  PrivateIntegrityCheckFrame.h  PrivateIntegrityCheckManager.h  PrivateMpController.h  PrivateMpControllerClient.h  PrivateMpControllerServer.h  PrivateMpFrame.h  PrivateMpManager.h  PrivateNetwork.h  PrivateOtpController.h  PrivateOtpControllerClient.h  PrivateOtpControllerServer.h  PrivateOtpFrame.h  PrivateOtpManager.h  PrivateScreen.h
Inline/Base/: Buffer.inl  CommonFrame.inl  CommonFrames.inl  Crc.inl  Lua.inl  Network.inl  Sha512.inl  UtilsConfig.inl
Inline/IntegrityCheck/: IntegrityCheckController.inl  IntegrityCheckControllerClient.inl  IntegrityCheckControllerServer.inl  IntegrityCheckFrame.inl  IntegrityCheckFrames.inl  IntegrityCheckManager.inl
Inline/Multipath/: MpController.inl  MpControllerClient.inl  MpControllerServer.inl  MpEncoder.inl  MpFrame.inl  MpFrames.inl  MpManager.inl
Inline/OneTimePad/: OtpController.inl  OtpControllerClient.inl  OtpControllerServer.inl  OtpEncoder.inl  OtpFrame.inl  OtpFrames.inl  OtpManager.inl
Source/: CMakeLists.txt
Source/Base/: Aes.cpp  Endianness.cpp  NetworkClient.cpp  NetworkServer.cpp  Sha512.cpp  Statistics.cpp  UtilsParser.cpp  UtilsPgm.cpp
Source/IntegrityCheck/: IntegrityCheckManager.cpp
Source/Linux/: NetworkClientTcp.cpp  NetworkClientUdp.cpp  NetworkServerTcp.cpp  NetworkServerUdp.cpp  Screen.cpp  Time.cpp
Source/Multipath/: MpManager.cpp
Source/OneTimePad/: OtpManager.cpp
Source/Windows/: NetworkClientTcp.cpp  NetworkClientUdp.cpp  NetworkServerTcp.cpp  NetworkServerUdp.cpp  Screen.cpp  Time.cpp  shaders.hlsl
Tests/: CMakeLists.txt  test-001-Buffer.cpp  test-002-Crc.cpp  test-003-Screen.cpp  test-004-Time.cpp  test-005-Aes.cpp  test-006-UtilsPgm.cpp  test-007-Endianness.cpp  test-008-Network.cpp  test-009-OtpEncoder.cpp  test-010-OtpManager.cpp  test-011-OtpFrame.cpp  test-012-OtpFrames.cpp  test-013-OtpController.cpp  test-014-MpEncoder.cpp  test-015-MpManager.cpp  test-016-MpFrame.cpp  test-017-MpFrames.cpp  test-018-MpController.cpp  test-019-Sha512.cpp  test-020-IntegrityCheckManager.cpp  test-021-IntegrityCheckFrame.cpp  test-022-IntegrityCheckFrames.cpp  test-023-IntegrityCheckController.cpp  test-024-Lua.cpp
ci/Windows-11/: build.ps1  demo.ps1  test.ps1
ci/ubuntu-22/: build.sh  demo.sh  test.sh
